@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2070 2004/01/15 19:39:35 peterrees Exp $
+ * $Id: ChangeLog,v 1.2071 2004/01/15 22:31:28 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-15 16:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/rtl/transfrm.c
+    * Minor fix to recent change.
+
+  * source/pp/ppcore.c
+  * tests/pp.prg
+    * Added .\/ as continuations characters for Extended Markers.
+
 2004-01-16 11:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   * source/rtl/gtwvt/gtwvt.c
      - WVT_SETFONT()/hb_wvt_gtSetFont() change so parameter fontWidth can be < 0
